--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|top"
+            android:textColor="@color/primary_text_material_dark"
             android:background="@android:color/black" />
     </RelativeLayout>
 
