--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -48,90 +48,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/resolution_label"
-                android:layout_margin="10dp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center" >
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp">
-
-                <Spinner
-                    android:id="@+id/resolution_spinner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/quality_label"
-                android:layout_margin="10dp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="1%"
-                    android:id="@+id/quality_text"
-                    android:layout_marginLeft="30dp"
-                    android:layout_gravity="right"
-                    android:textSize="@dimen/abc_text_size_menu_material" />
-
-                <SeekBar
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/quality_seekbar"
-                    android:max="99"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="30dp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/compression_method_label"
+                android:text="@string/image_label"
                 android:layout_margin="10dp"
-                android:id="@+id/textView"
-                android:visibility="gone" />
+                android:id="@+id/image_label" />
 
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="start"
-                android:layout_marginLeft="20dp"
-                android:visibility="gone">
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/jpeg_label"
-                    android:id="@+id/radioButton3" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bgp_label"
-                    android:id="@+id/radioButton4" />
-            </RadioGroup>
+            <Button
+                android:id="@+id/image_settings_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/open_image_settings"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_gravity="center_horizontal"
+                android:onClick="openImageSettings" />
 
             <TextView
                 android:layout_width="wrap_content"
