Added fast fps mode
Added Fast FPS mode, which is available on S3 CM11.
Rearranged the printing of parameters of the camera

--- a/app/src/main/res/layout/image_settings.xml
+++ b/app/src/main/res/layout/image_settings.xml
@@ -227,6 +227,13 @@
                     android:text="@string/image_stabilization_checkBox"
                     android:id="@+id/image_stabilization"
                     android:layout_marginLeft="20dp" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fast_fps_mode_checkbox"
+                    android:id="@+id/fast_fps_checkbox"
+                    android:layout_marginLeft="20dp" />
             </LinearLayout>
 
             <Button
