Fixed auto-exposure lock
Was not working on S3 (too bad I use two of them for this project).
Fixed it by adding a "lock exposure" button on main screen; looks like
it's impossible to lock auto-exposure if camera is not working. Thanks
to "Open Camera" I found that.
Works on CM11 so far.

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -36,6 +36,21 @@
             android:layout_gravity="bottom|top"
             android:textColor="@color/primary_text_material_dark"
             android:background="@android:color/black" />
+
+        <ImageButton
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/imageButton2"
+            android:onClick="toggleExposureLock"
+            android:src="@android:drawable/ic_lock_idle_lock"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop"
+            android:background="@null"
+            android:layout_marginRight="256dp"
+            android:layout_marginEnd="256dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
     <ImageButton
@@ -48,5 +63,6 @@
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:background="@null" />
+
 </FrameLayout>
 
