--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -37,20 +37,6 @@
             android:textColor="@color/primary_text_material_dark"
             android:background="@android:color/black" />
 
-        <ImageButton
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:id="@+id/imageButton2"
-            android:onClick="toggleExposureLock"
-            android:src="@android:drawable/ic_lock_idle_lock"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="centerCrop"
-            android:background="@null"
-            android:layout_marginRight="256dp"
-            android:layout_marginEnd="256dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
     <ImageButton
@@ -63,6 +49,20 @@
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:background="@null" />
+
+    <ImageButton
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:id="@+id/auto_exposure_lock_button"
+        android:onClick="toggleExposureLock"
+        android:src="@drawable/exposure_locked"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="32dp" />
 
 </FrameLayout>
 
